--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
   africatrip:
-    image: noumendarryl/AfricaTrip
+    image: noumendarryl/africatrip
     ports:
       - 80:80
