--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -16,12 +16,10 @@ spec:
      spec:
          containers:
          - name: africatrip
-           image: "noumendarryl/africatrip:latest"
+           image: noumendarryl/africatrip:latest
            ports:
            - containerPort: 80
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
