--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -9,10 +9,9 @@ spec:
     app: africatrip
   type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 80
+  - port: 80
     targetPort: 80
-    nodePort: 30000
+    nodePort: 30050
 
 ---
 
