k8s deploymentserviceingress.yml reviewed

--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -5,11 +5,11 @@ metadata:
 spec:
   selector:
     app: africatrip
-  # type: LoadBalancer
-  type: NodePort
+  type: LoadBalancer
   ports:
-  # - protocol: TCP
-  - port: 80
+  - protocol: TCP
+    port: 80
+    targetport: 80
     nodePort: 31110
 
 ---
