--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -43,13 +43,13 @@ kind: Ingress
 metadata:
   name: africatrip-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /index.html
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: www.africatrip.com
       http:
         paths:
-          - path: /
+          - path: /index.html
             pathType: Prefix
             backend:
               service:
