Jenkinsfile & deploymentserviceingress.yml reviewed

--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -5,11 +5,9 @@ metadata:
 spec:
   selector:
     app: africatrip
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+  - port: 80
     nodePort: 30050
 
 ---
