--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -7,7 +7,9 @@ spec:
     app: africatrip
   type: NodePort
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
     nodePort: 30050
 
 ---
