--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: africatrip-service
+  namespace: default
 spec:
   selector:
     app: africatrip
@@ -39,6 +40,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: africatrip-ingress
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
