--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -44,7 +44,7 @@ spec:
         - name: jfrogkey
       containers:
         - name: africatrip
-          image: https://jabaspace.jfrog.io/jabaspace/noumendarryl/africatrip:latest
+          image: noumendarryl/africatrip:latest
           imagePullPolicy: Always
           ports:
           - containerPort: 80
