--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -29,10 +29,9 @@ spec:
     metadata:
       labels:
         app: africatrip
-        track: stable
     spec:
-      imagePullSecrets:
-        - name: jfrogkey
+      # imagePullSecrets:
+      #   - name: jfrogkey
       containers:
         - name: africatrip
           image: noumendarryl/africatrip:latest
