--- a/deploymentserviceingress.yml
+++ b/deploymentserviceingress.yml
@@ -8,8 +8,8 @@ spec:
   type: LoadBalancer
   ports:
   - protocol: TCP
-    port: 80 # this is the service port
-    targetPort: 80 # this is the container port
+    port: 80 
+    targetPort: 80 
     nodePort: 30050
 
 ---
